# self-hosted-ai-starter-kit

./: .env.example  .gitignore  SECURITY.md  docker-compose.yml  pyproject.toml
tests/: test_compose_validator.py  test_credential_validator.py  test_env_validator.py  test_workflow_validator.py
utils/: compose_validator.py  credential_validator.py  env_validator.py  workflow_validator.py
