[project]
name = "self-hosted-ai-starter-kit"
version = "0.1.0"
description = "Configuration validators and tests for the Self-hosted AI Starter Kit"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=utils --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["utils"]

[tool.setuptools.packages.find]
include = ["utils*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
